--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,14 @@ a{
     text-decoration: none;
     
     color: #5c5c5c;
+    display: inline-block;
+    transition: .2s;
     
+}
+
+a:hover{
+  color: #ffff;
+  transform: scale(1.1);  
 }
 
 header{
@@ -87,14 +94,27 @@ font-weight:700;
 background-color: #00ff08;
 border: 0;
 border-radius:30px;
+cursor: pointer;
 }
 
 .botao-contato{
     position: absolute;
-    right: 10px;
+    right: 130px;
     top: 255px;
-    
+    border: 0;
+    outline: none;
 
+}
+
+.botao-contato:focus{
+    outline: none;
+}
+
+.botao-contato:hover{
+box-shadow: 0px 0px 20px #00ff08;
+
+
+border-radius: 30px;
 }
 
 .logo{
