--- a/styleprojetos.css
+++ b/styleprojetos.css
@@ -1,3 +1,52 @@
 body{
     background-color: black;
 }
+
+.txt-topo-tela{
+    display: flex;
+    
+    justify-content: center;
+    
+    padding: 40px;
+    border: 2px solid #00ff08;
+    border-radius: 8px;
+    box-shadow: 0px 0px 20px #00ff08;
+    margin-top: 20px;
+    font-size: 30px;
+    
+    color: white;
+    
+    
+}
+
+.interface-dos-projetos{
+    display: inline-flex;
+    
+    justify-content: center;
+    flex-direction: column;
+    padding: 40px;
+    
+    border-radius: 8px;
+    
+    margin-top: 20px;
+    font-size: 30px;
+    
+    color: white;
+}
+
+.top-weapon,
+.geometric-danger,
+.shiver-me-timbers,
+.barbaro,
+.nave-vs-alien {
+    display: inline-block;
+    color: white;
+    border: 2px solid #00ff08;
+    box-shadow: 0px 0px 20px #00ff08;
+    padding: 20px;
+}
+
+.top-weapon{
+    display: flex;
+    align-items: center;
+}
